[project]
name = "agent-heartbeat"
version = "0.2.0"
description = "Standalone scripts and templates for running an agent heartbeat workflow."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "IO", email = "io@nousresearch.com" }
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools]
packages = []
